# cordius

./: Cargo.toml
messages/: message.rs  mod.rs
src/: lib.rs  main.rs
src/api/: activity_types.rs  endpoints.rs  gateway_intents.rs  message_flags.rs  mod.rs
src/application/: application.rs  mod.rs
src/channel/: channel.rs  mod.rs
src/client/: client.rs  mod.rs
src/client/payload/: mod.rs  payload.rs  payload_parser.rs  reply.rs
src/core/types/: mod.rs
src/core/types/discord/: mod.rs  snowflake.rs
src/core/types/discord/user/: avatar_decoration_data.rs  collectibles.rs  nameplate.rs  user.rs  user_primary_guild.rs
