[package]
name = "cordius"
version = "0.0.1"
edition = "2024"
authors = ["Ivaylo D. Y. <randomacc.for1randomthings@gmail.com>"]
description = "The best Rust library for Discord API"
license = "ISC"
repository = "https://github.com/cordius-rs/cordius"
keywords = ["discord"]
readme = "README.md"

[dependencies]
bitflags = "2.9.1"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde_json = "1.0.140"
anyhow = "*"
